more general formatting and suggested changes